assert-struct/tests/compile_fail/span_propagation_index.stderr
error[E0608]: cannot index into a value of type `&i32`
  --> tests/compile_fail/span_propagation_index.rs:14:14
   |
14 |         value[0]: 42,
   |              ^
